Add favicon link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="謎解きやマーダーミステリーで遊べるサイト - やまーたの謎解きアトリエ"
     />
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
     <title>やまーたの謎解きアトリエ</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
